--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -6,5 +6,11 @@
   "tabWidth": 2,
   "trailingComma": "none",
   "semi": true,
-  "arrowParens": "avoid"
+  "arrowParens": "avoid",
+  "plugins": [
+    "prettier-plugin-tailwindcss"
+  ],
+  "tailwindFunctions": [
+    "clsx"
+  ]
 }
