--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@charlietango/use-native-lazy-loading": "^1.10.0",
     "@tanstack/react-query": "^5.0.0",
     "axios": "^1.5.1",
-    "classnames": "^2.3.2",
+    "clsx": "^2.0.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
