--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.0.0",
     "axios": "^1.5.1",
     "clsx": "^2.0.0",
+    "dompurify": "^3.0.6",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -23,6 +24,7 @@
     "zustand": "^4.4.4"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.4",
     "@types/lodash": "^4.14.199",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
