--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@charlietango/use-native-lazy-loading": "^1.10.0",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "@tanstack/react-query": "^5.0.0",
     "axios": "^1.5.1",
     "clsx": "^2.0.0",
