--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@tanstack/react-query": "^5.0.0",
+    "@tiptap/pm": "^2.1.13",
     "axios": "^1.5.1",
     "clsx": "^2.0.0",
     "dompurify": "^3.0.6",
