--- a/public/config.json
+++ b/public/config.json
@@ -5,8 +5,8 @@
     "logo": "https://avatars.githubusercontent.com/u/45938169?v=4"
   },
   "blogger": {
-    "blogId": "3190947245348881579",
-    "blogUrl": "https://codepelajar.blogspot.com"
+    "blogId": "7496508518212181894",
+    "blogUrl": "https://vinkanime.blogspot.com"
   },
   "google": {
     "apiKey": "AIzaSyB2MpzH-Gq6fnWuUnoI2PH2sPMTkGIQ9b0",
