--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tiptap/pm": "^2.1.13",
     "axios": "^1.5.1",
     "clsx": "^2.0.0",
+    "disqus-react": "^1.1.5",
     "dompurify": "^3.0.6",
     "moment": "^2.29.4",
     "react": "^18.2.0",
